@@ -46,6 +46,9 @@ PHP                                                                        NEWS
     in current rowset haven't been fetched). (Peter LeBrun)
   . Ignore potentially misleading dberr values. (Chris Kings-Lynne)
 
+- phpdbg:
+  . Added generator command for inspection of currently alive generators. (Bob)
+
 - Session:
   . Fixed bug #73100 (session_destroy null dereference in ps_files_path_create).
     (cmb)
